--- a/app/src/main/res/layout/compromisso_card.xml
+++ b/app/src/main/res/layout/compromisso_card.xml
@@ -22,7 +22,7 @@
             android:layout_width="12dp"
             android:layout_height="match_parent"
 
-            android:background="@color/dark_theme_red"
+            android:background="@color/black"
             />
 
         <LinearLayout
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
 
                 android:text="10 de Dezembro"
-                android:textColor="@color/dark_theme_red"
+                android:textColor="@color/white"
                 android:textSize="16sp"/>
 
             <TextView
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="Farmácia"
+                android:text="Título"
                 android:textColor="@color/white"
                 android:textSize="20sp"/>
 
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="Comprar uma caixa de Paracetamol e outra de Nimesulida"
+                android:text="descricao"
                 android:textColor="#9AFFFFFF"
                 android:textSize="14sp"/>
 
