--- a/app/src/main/res/layout/compromisso_card.xml
+++ b/app/src/main/res/layout/compromisso_card.xml
@@ -38,8 +38,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="10 de Dezembro"
-                android:textColor="@color/white"
+                android:text="Data"
+                android:textColor="@color/black"
                 android:textSize="16sp"/>
 
             <TextView
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="descricao"
+                android:text="descrição"
                 android:textColor="#9AFFFFFF"
                 android:textSize="14sp"/>
 
