--- a/app/src/main/res/layout/activity_add_compromisso_acticity.xml
+++ b/app/src/main/res/layout/activity_add_compromisso_acticity.xml
@@ -13,7 +13,7 @@
         android:layout_height="60dp"
 
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/dark_theme_purple"
+        android:background="#342E55"
 
         >
 
@@ -23,7 +23,7 @@
 
             android:layout_gravity="center_vertical"
 
-            android:text="TELA APENAS PARA TESTE"
+            android:text="Adicionar Compromisso"
             android:textColor="@color/white"
             android:textSize="20sp"/>
 
@@ -33,120 +33,51 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:orientation="vertical"
-
-        app:layout_constraintTop_toBottomOf="@id/topbar"
         android:layout_margin="12dp"
-        >
+
+        app:layout_constraintTop_toBottomOf="@id/topbar">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="Data:"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_marginBottom="10dp"/>
 
-            <EditText
-                android:id="@+id/data_input"
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:inputType="text"
-                android:maxLines="1"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/white"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            >
+                android:text="Data: "
+                style="@style/add_activity_text"
+                android:textStyle="bold"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/data_text"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
 
-                android:text="Título:"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_marginBottom="10dp"/>
 
-            <EditText
-                android:id="@+id/titulo_input"
+                android:layout_marginStart="12dp"
+                android:text="00 de Janeiro, 2020"
+                style="@style/add_activity_text"/>
 
-                android:layout_width="match_parent"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/change_date_button"
+
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
 
-                android:inputType="text"
-                android:maxLines="1"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/white"/>
+                android:layout_weight="0.3"
+
+                android:layout_gravity="center_vertical"
+                android:background="?android:selectableItemBackground"
+
+                android:text="Mudar"
+                android:textColor="@color/dark_theme_purple"
+                android:textSize="20sp"/>
+
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="12dp"
-            android:text="Descrição:"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/descricao_input"
-
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-
-            android:inputType="text"
-            android:maxLines="3"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/white"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="Id da cor (0 a 3):"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-
-                android:textSize="20sp"
-                android:layout_marginBottom="10dp"/>
-
-            <EditText
-                android:id="@+id/colorId_input"
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:textColor="@color/white"
-
-                android:inputType="number"
-                android:maxLines="1"
-                android:backgroundTint="@color/white"/>
-
-        </LinearLayout>
 
     </LinearLayout>
 
