adição dos campos na tela de compromisso. Possibilidade de selecionar a cor desejada. Pequenas alterações na tela de início, e alterações na forma como o arquivo é escrito.

--- a/app/src/main/res/layout/activity_add_compromisso_acticity_backup.xml
+++ b/app/src/main/res/layout/activity_add_compromisso_acticity_backup.xml
@@ -158,7 +158,7 @@
 
         app:fabCustomSize="64dp"
 
-        android:backgroundTint="@color/dark_theme_purple"
+        android:backgroundTint="@color/dark_theme_purple_primary"
         app:tint="@color/white"
 
 
