--- a/app/src/main/res/layout/activity_add_compromisso_acticity.xml
+++ b/app/src/main/res/layout/activity_add_compromisso_acticity.xml
@@ -33,13 +33,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        android:orientation="vertical"
         android:layout_margin="12dp"
 
         app:layout_constraintTop_toBottomOf="@id/topbar">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -52,12 +55,12 @@
 
             <TextView
                 android:id="@+id/data_text"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-
+                android:layout_weight="9"
                 android:layout_marginStart="12dp"
-                android:text="00 de Janeiro, 2020"
+                android:text="00 de Jan, 2020"
                 style="@style/add_activity_text"/>
 
             <androidx.appcompat.widget.AppCompatButton
@@ -66,30 +69,154 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
 
-                android:layout_weight="0.3"
 
-                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical|end"
                 android:background="?android:selectableItemBackground"
 
                 android:text="Mudar"
-                android:textColor="@color/dark_theme_purple"
-                android:textSize="20sp"/>
+                android:textColor="#7CB342"
+                android:textSize="20sp"
+                android:textAllCaps="false"/>
 
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="12dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:paddingBottom="3dp"
+
+                android:gravity="bottom"
+                android:text="Título: "
+                style="@style/add_activity_text"
+                android:textStyle="bold"/>
+
+            <EditText
+
+                android:id="@+id/add_titulo_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:backgroundTint="#90FFFFFF"
+
+                android:inputType="text"
+                android:maxLines="1"
+
+                android:layout_gravity="bottom"
+                android:layout_marginStart="12dp"
+                android:hint="Dentista..."
+                style="@style/add_activity_text"/>
+
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            style="@style/add_activity_text"
+
+            android:layout_margin="12dp"
+            android:text="Descrição:"/>
+
+        <EditText
+            android:id="@+id/add_descricao_input"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+
+            android:layout_marginBottom="12dp"
+
+            android:inputType=""
+
+            android:padding="12dp"
+            android:gravity="top"
+            android:hint="Fazer a extração do siso..."
+            style="@style/add_activity_text"
+            android:background="#08FFFFFF"
+            android:lines="5"
+            android:maxLines="1"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_margin="12dp"
+            android:text="Cor do card:"
+            style="@style/add_activity_text"/>
+
+        <RadioGroup
+            android:id="@+id/colors_radio_group"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+
+            android:layout_marginEnd="12dp"
+            android:checkedButton="@id/red_color_radio"
+            >
+
+            <RadioButton
+                android:id="@+id/red_color_radio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="24dp"
+                android:layout_weight="0.25"
+                android:background="@drawable/radio_button_collor"
+                android:backgroundTint="@color/dark_theme_red"/>
+
+            <RadioButton
+                android:id="@+id/green_color_radio"
+                android:layout_weight="0.25"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="24dp"
+                android:background="@color/dark_theme_green"/>
+
+            <RadioButton
+                android:id="@+id/pink_color_radio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_weight="0.25"
+                android:layout_marginStart="24dp"
+                android:background="@drawable/radio_button_collor"
+                android:backgroundTint="@color/dark_theme_pink"/>
+
+            <RadioButton
+                android:id="@+id/purple_color_radio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="24dp"
+
+                android:layout_weight="0.25"
+                android:background="@color/dark_theme_purple"/>
+
+
+        </RadioGroup>
 
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/save_button"
+        android:id="@+id/add_save_button"
 
         android:layout_width="64dp"
         android:layout_height="64dp"
 
         app:fabCustomSize="64dp"
 
-        android:backgroundTint="@color/dark_theme_purple"
+        android:backgroundTint="@color/dark_theme_purple_primary"
         app:tint="@color/white"
 
 
