--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="60dp"
 
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/dark_theme_purple"
+        android:background="@color/dark_theme_purple_primary"
 
         >
 
@@ -66,7 +66,7 @@
 
         app:fabCustomSize="64dp"
 
-        android:backgroundTint="@color/dark_theme_purple"
+        android:backgroundTint="@color/dark_theme_purple_primary"
         app:tint="@color/white"
 
 
