--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="dark_theme_purple">#37315c</color>
+    <color name="dark_theme_purple_primary">#37315c</color>
     <color name="dark_theme_black">#17151F</color>
     <color name="dark_theme_gray">#211E2B</color>
     <color name="dark_theme_red">#F2505D</color>
     <color name="dark_theme_green">#26BF5C</color>
+    <color name="dark_theme_pink">#D2369D</color>
+    <color name="dark_theme_purple">#B15AEA</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
