--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.AgendaSimples" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dark_theme_purple</item>
+        <item name="colorPrimary">@color/dark_theme_purple_primary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -38,7 +38,9 @@
 
     <style name="add_activity_text" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">#EFE8FF</item>
+        <item name="android:textColorHint">#54FFFFFF</item>
+        <item name="textAllCaps">false</item>
     </style>
 
 </resources>
